--- a/bismillah.html
+++ b/bismillah.html
@@ -8,6 +8,7 @@
 
 <body>
     Bismillah Hirrahmaa Nirrahim
+    <h1 style="color: green;">Start with the Name of Allah Who is the most Merciful</h1>
 </body>
 
 </html>
