--- a/bismillah.html
+++ b/bismillah.html
@@ -9,7 +9,7 @@
 <body>
     Bismillah Hirrahmaa Nirrahim
     <h1 style="color: green;">Start with the Name of Allah Who is the most Merciful</h1>
-    <p>This is my First Document with I am using git</p>
+    <p style="color: brown;">This is my First Document with I am using git</p>
 </body>
 
 </html>
