--- a/bismillah.html
+++ b/bismillah.html
@@ -3,14 +3,22 @@
 <head>
    
     <title>Bismillah</title>
-
+    <style>
+        h1{
+            color: green;
+        }
+        p{
+            color: brown; font-size: 22px;  
+            font-family: Arial, Helvetica ;
+        }
+    </style>
 </head>
 
 <body>
-    Bismillah Hirrahmaa Nirrahim
-    <h1 style="color: green;">Start with the Name of Allah Who is the most Merciful</h1>
+    <h1>Bismillah Hirrahmaa Nirrahim</h1>
+    <h1>Start with the Name of Allah Who is the most Merciful</h1>
 
-    <p style=" color: brown; font-size: 22px;  font-family: Arial, Helvetica ;" >This is my First Document with I am using git</p>
+    <p>This is my First Document with I am using git</p>
 
 </body>
 
