--- a/bismillah.html
+++ b/bismillah.html
@@ -5,6 +5,9 @@
     <title>Bismillah</title>
     <style>
         h1{
+            color: red;
+        }
+        h2{
             color: green;
         }
         p{
@@ -16,7 +19,7 @@
 
 <body>
     <h1>Bismillah Hirrahmaa Nirrahim</h1>
-    <h1>Start with the Name of Allah Who is the most Merciful</h1>
+    <h2>Start with the Name of Allah Who is the most Merciful</h1>
 
     <p>This is my First Document with I am using git</p>
 
